<resources>
    <string name="app_name">PROG7313 Budget Tracker App</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="registerbtn">Register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="username">Username</string>
    <string name="enter_a_ending_date">Enter a ending date</string>
    <string name="filter_expenses">Filter expenses</string>
    <string name="enter_a_starting_date">Enter a starting date</string>
    <string name="report">Report</string>
    <string name="expenses_will_appear_here">Expenses will appear here</string>
    <string name="total_r0_00">Total R0.00</string>
    <string name="welcome_to_budget_tracker">Welcome To Budget Tracker</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="click_here_to_login_in">Click here to login in</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account? Click Here</string>
    <string name="main_menu">Main Menu</string>
    <string name="welcome_user">WELCOME USER</string>
    <string name="choose_an_option_to_continue">Choose an option to continue</string>
    <string name="expenses">Expenses</string>
    <string name="reports">Reports</string>
    <string name="logout">Logout</string>
    <string name="enter_category">Enter Category</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_your_maximum_goal">Enter your maximum goal</string>
    <string name="enter_your_minimum_goal">Enter your minimum goal</string>
    <string name="monthly_goals">Monthly Goals</string>
    <string name="expensesHead">Expenses</string>
    <string name="enter_date">Enter Date</string>
    <string name="save_expense">Save Expense</string>
    <string name="save_goal">Save Goal</string>
    <string name="add_photo">Add photo</string>
    <string name="log_new_expense">Log New Expense</string>
    <string name="filter_by_date">Filter by Date</string>
</resources>