<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#78DB7E"
    tools:context=".ReportPage">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/report"
        android:textColor="#090909"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/startingDate"
        android:layout_width="262dp"
        android:layout_height="49dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:background="#F2EDED"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_a_starting_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="#141313"
        android:textColorHint="#141414"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/endingDate"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:background="#F2EDED"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_a_ending_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="#0F0E0E"
        android:textColorHint="#101010"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startingDate" />

    <Button
        android:id="@+id/filter_Expenses"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="sans-serif-black"
        android:text="@string/filter_expenses"
        android:textColor="#101010"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endingDate" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="109dp"
        android:layout_height="26dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/total_r0_00"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_Expenses"
        tools:ignore="TextSizeCheck" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/expenseListContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>